- Adjusted Flexmojos to work with changed FDKs due to refactorings of the Mavenizer - Removed a lot of legacy stuff that does not apply to Apache Flex - Changes to the Granite Generators:      - Added a new option "generateEnumToTransientStorage" to generate Enum classes to target/generated-sources      - Added a new option "generateInterfaceToTransientStorage" to generate interfaces to target/generated-sources      - Added a new Granite 2.3.2 Generator and made that default  - Removed the option: "iKnowWhatImDoingPleaseBreakMyBuildIwontBlameFlexmojosForStopWorking" from the flexmojos-maven-plugin  - Updated the swfVersion information up to player version 14.0  - Did some changes to the test compiler to give better errors when compiling Air tests  - Removed any still existing reference to old Adobe FDKs